--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,13 @@
 {
-  "extends": [
-    "config:base"
+  "enabled": true,
+  "schedule": [
+    "before 4am on Saturday"
+  ],
+  "packageRules": [
+    {
+      "managers": ["github-actions"],
+      "groupName": "all github actions",
+      "groupSlug": "all-github-actions"
+    }
   ]
 }
