--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          distribution: zulu
+          java-version: 11
       - uses: burrunan/gradle-cache-action@v1
         name: Gradle release with caches caching
         with:
