chore: Add detekt static analyzer
* Enable detekt-formatting

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           arguments: build
           gradle-version: wrapper
+          properties: |
+            detektAutoCorrect=false
       - name: Upload test reports
         if: ${{ failure() }}  # runs only if previous step has failed, the entire workflow will still be marked as failed
         uses: actions/upload-artifact@v2
