--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: burrunan/gradle-cache-action@v1
         name: Gradle build with caches caching
         with:
-          arguments: build
+          arguments: check build
           gradle-version: wrapper
           properties: |
             detektAutoCorrect=false
