--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,15 +16,12 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: zulu
+          distribution: temurin
           java-version: 11
-      - uses: burrunan/gradle-cache-action@v1
-        name: Gradle build with caches caching
+      - uses: gradle/gradle-build-action@v2
         with:
-          arguments: check build
-          gradle-version: wrapper
-          properties: |
-            detektAutoCorrect=false
+          arguments: check build -PdetektAutoCorrect=false
+          gradle-version: wrapper            
       - name: Upload test reports
         if: ${{ failure() }}  # runs only if previous step has failed, the entire workflow will still be marked as failed
         uses: actions/upload-artifact@v3
