--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: zulu
+          distribution: temurin
           java-version: 11
-      - uses: burrunan/gradle-cache-action@v1
-        name: Gradle release with caches caching
+      - uses: gradle/gradle-build-action@v2
         with:
           arguments: publishToSonatype closeSonatypeStagingRepository
           gradle-version: wrapper
@@ -48,8 +47,7 @@ jobs:
         with:
           distribution: zulu
           java-version: 11
-      - uses: burrunan/gradle-cache-action@v1
-        name: Gradle release with caches caching
+      - uses: gradle/gradle-build-action@v2
         with:
           arguments: publishToSonatype closeSonatypeStagingRepository
           gradle-version: wrapper
@@ -64,8 +62,7 @@ jobs:
         with:
           distribution: zulu
           java-version: 11
-      - uses: burrunan/gradle-cache-action@v1
-        name: Gradle release with caches caching
+      - uses: gradle/gradle-build-action@v2
         with:
           arguments: publishToSonatype closeSonatypeStagingRepository
           gradle-version: wrapper
