ci: Auto-suggest code fixes in PRs

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: 11
       - uses: gradle/gradle-build-action@v2
         with:
-          arguments: check build -PdetektAutoCorrect=false --scan
+          arguments: check build -PdetektAutoCorrect=true --scan
           gradle-version: wrapper            
       - name: Upload test reports
         if: ${{ failure() }}  # runs only if previous step has failed, the entire workflow will still be marked as failed
@@ -35,3 +35,6 @@ jobs:
         with:
           flags: unittests
           fail_ci_if_error: true # optional (default = false)
+      - uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: detekt
