--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ kotlin.code.style=official
 # https://kotlinlang.org/docs/whatsnew19.html#try-the-k2-compiler-in-your-project
 kotlin.experimental.tryK2=true
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.caching=true
 # https://kotlinlang.org/docs/whatsnew19.html#preview-of-gradle-configuration-cache
-org.gradle.caching=false
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
