--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         name: run detekt
         with:
-          arguments: check -Pdetekt.multiplatform.disabled=false
+          arguments: check -Pdetekt.multiplatform.disabled=false -PdetektAutoCorrect=true
           gradle-version: wrapper
       - uses: reviewdog/action-suggester@v1
         # Fixme: run if only the previous step has failed
