--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           arguments: check -Pdetekt.multiplatform.disabled=false -PdetektAutoCorrect=true
           gradle-version: wrapper
+      - run: git status && git diff
       - uses: reviewdog/action-suggester@v1
         # Fixme: run if only the previous step has failed
         if: ${{ failure() }}
