Update Kotlin to 1.9.20

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
 # https://kotlinlang.org/docs/whatsnew19.html#try-the-k2-compiler-in-your-project
-kotlin.experimental.tryK2=true
+kotlin.experimental.tryK2=false
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
 # https://kotlinlang.org/docs/whatsnew19.html#preview-of-gradle-configuration-cache
