Reduce requency of renovate updates

--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "enabled": true,
   "schedule": [
-    "before 4am on Saturday"
+    "every 3 months on the first day of the month"
   ],
   "packageRules": [
     {
