--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,12 +20,13 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
-      - uses: gradle/gradle-build-action@v2
-        name: build and test
+      - uses: gradle/actions/setup-gradle@v3
+        name: Setup Gradle
         with:
-          arguments: check build -x detekt -Pdetekt.multiplatform.disabled=true --scan
           gradle-version: wrapper
-          dependency-graph: generate-and-submit
+          cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
+      - name: build and test
+        run: ./gradlew check build -x detekt -Pdetekt.multiplatform.disabled=true --scan --configuration-cache
       - name: Upload test reports
         if: ${{ failure() }}  # runs only if previous step has failed, the entire workflow will still be marked as failed
         uses: actions/upload-artifact@v4
@@ -37,6 +38,10 @@ jobs:
         with:
           flags: unittests
           fail_ci_if_error: true # optional (default = false)
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v3
+        with:
+          cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
           
       - uses: gradle/gradle-build-action@v2
         name: run detekt
