chore: disable ForbiddenComment

--- a/detekt.yml
+++ b/detekt.yml
@@ -5,6 +5,8 @@ style:
   MaxLineLength:
     active: true
     maxLineLength: 180
+  ForbiddenComment:
+    active: false
 formatting:
   active: true
   MaximumLineLength:
