Perform an overall code cleanup (#108)
As per title, this is just a cleanup to enhance readability or remove unused/duplicated APIs.

--- a/detekt.yml
+++ b/detekt.yml
@@ -1,11 +1,17 @@
 style:
   active: true
+  ReturnCount:
+    max: 3
   MaxLineLength:
     active: true
     maxLineLength: 180
+  ForbiddenComment:
+    active: false
 formatting:
   active: true
   MaximumLineLength:
     active: false
   ParameterListWrapping:
     active: false
+  TrailingCommaOnDeclarationSite:
+    active: true
