chore: disable unnecessary Detekt rules
Required to correctly host the new code.

--- a/detekt.yml
+++ b/detekt.yml
@@ -15,3 +15,12 @@ formatting:
     active: false
   TrailingCommaOnDeclarationSite:
     active: true
+complexity:
+  ComplexCondition:
+    active: false
+  CyclomaticComplexMethod:
+    active: false
+  NestedBlockDepth:
+    active: false
+  LongParameterList:
+    functionThreshold: 7
