all the multiplatform targets enabled, dependencies updated to the latest versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,13 @@
 kotlin.code.style=official
-# https://kotlinlang.org/docs/whatsnew19.html#try-the-k2-compiler-in-your-project
-kotlin.experimental.tryK2=false
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
 # https://kotlinlang.org/docs/whatsnew19.html#preview-of-gradle-configuration-cache
 org.gradle.configuration-cache=false
 org.gradle.parallel=true
+kotlin.apple.xcodeCompatibility.nowarn=true
+kotlin.experimental.swift-export.enabled=true
+kotlin.native.enableKlibsCrossCompilation=true
+kotlin.incremental.wasm=true
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+version=0.1-SNAPSHOT
