--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
-kotlin = "1.9.24"
-detekt = "1.23.5"
-dokka = "1.9.20"
+kotlin = "2.1.0"
+detekt = "1.23.7"
+dokka = "2.0.0"
 nexus = "1.3.0"
+versionsPlugin = "0.52.0"
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+versions = { id = "com.github.ben-manes.versions", version.ref = "versionsPlugin" }
 
 [libraries]
 detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
