--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ env:
   OSSRH_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
 
 jobs:
-  release_linux:
-    name: Build release on main platform (Linux)
+  release:
+    name: Build release
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -37,35 +37,3 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-  release_macos:
-    name: Build release on MacOS
-    runs-on: macos-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          distribution: zulu
-          java-version: 11
-      - uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: wrapper
-          cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
-      - run: ./gradlew publishToSonatype closeSonatypeStagingRepository
-  release_windows:
-    name: Build release on Windows
-    runs-on: windows-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          distribution: zulu
-          java-version: 11
-      - uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: wrapper
-          cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
-      - run: ./gradlew publishToSonatype closeSonatypeStagingRepository
