build: enable all supported native targets

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ org.gradle.configuration-cache = false
 # Kotlin settings
 #########################
 kotlin.code.style = official
+
+# Kotlin/Native
+kotlin.native.enableKlibsCrossCompilation = true
