--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kotlin = "2.1.20"
+kotlin = "2.2.20-RC2"
 detekt = "1.23.8"
-dokka = "1.9.20"
+dokka = "2.1.0-Beta"
 nexus = "2.0.0"
 
 [plugins]
