--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #########################
 # Gradle settings
 #########################
-org.gradle.jvmargs = -Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs = -Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel = true
 org.gradle.caching = true
 org.gradle.configuration-cache = false
