--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 org.gradle.jvmargs = -Xmx4g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel = true
 org.gradle.caching = true
-org.gradle.configuration-cache = false
+org.gradle.configuration-cache = true
 
 #########################
 # Kotlin settings
