--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,14 @@ on:
   push:
     tags:
       - 'v*'
+
 env:
-  GPG_SEC: ${{ secrets.PGP_SEC }}
-  GPG_PASSWORD: ${{ secrets.PGP_PASSWORD }}
-  OSSRH_USERNAME: ${{ secrets.SONATYPE_USER }}
-  OSSRH_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+  # See https://vanniktech.github.io/gradle-maven-publish-plugin/central for the list of required properties
+  ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ vars.PGP_KEY_ID }}
+  ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.PGP_SEC }}
+  ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.PGP_PASSWORD }}
+  ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.CENTRAL_PORTAL_USER }}
+  ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.CENTRAL_PORTAL_PASSWORD }}
 
 jobs:
   release:
@@ -35,4 +38,4 @@ jobs:
         with:
           gradle-version: wrapper
           cache-encryption-key: ${{ secrets.GRADLE_ENCRYPTION_KEY }}
-      - run: ./gradlew publishToSonatype closeSonatypeStagingRepository
+      - run: ./gradlew publishToMavenCentral
